# Elementary-Engine

./: CMakeLists.txt  LICENSE  README.md
private/: config.h.in
public/: main.cpp
